update old mods